Prod setup: Docker, Render, sanitize env examples

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,7 @@
 # Basic server
 PORT=8080
 FRONTEND_ORIGIN=http://localhost:5173
+APP_ENV=development
 
 # Database (SQLite dev default or Postgres)
 # For SQLite (recommended for local dev): file:server.db
@@ -9,16 +10,20 @@ DATABASE_URL=file:server.db
 # DATABASE_URL=postgres://postgres:postgres@localhost:5432/sengem?sslmode=disable
 
 # Sessions
-SESSION_SECRET=replace-with-a-long-random-string
+SESSION_SECRET=CHANGE_ME_TO_A_STRONG_SECRET
+# In production, cookies are Secure; set APP_ENV=production and ensure HTTPS
 
-# Google OAuth2
+# Google OAuth2 (optional)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 # Must match the OAuth client settings in Google Cloud
 OAUTH_REDIRECT_URL=http://localhost:8080/auth/google/callback
 
 # Where to redirect the browser after successful login
-AFTER_LOGIN_REDIRECT=/api/me
+AFTER_LOGIN_REDIRECT=http://localhost:5173/#/
 
 # Questions directory (relative to this server folder by default)
 QUESTIONS_DIR=../sinjeem-game/public/questions
+
+# Public base URL used in links (for verification/reset emails); keep empty in dev or set http://localhost:8080
+PUBLIC_BASE_URL=
